fix lng on mobile

--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -101,7 +101,7 @@
       cursor: pointer;
 
       @include responsive-max(lg) {
-        padding: 0.6em 2.6em;
+        padding: 0.66em 2.6em;
         border: 1px solid $paragraph;
       }
 
